cmake_minimum_required(VERSION 2.8.8)

add_library(ptescore
    alternateending.cpp
    barline.cpp
    direction.cpp
    dynamic.cpp
    generalmidi.cpp
    instrument.cpp
    keysignature.cpp
    note.cpp
    player.cpp
    playerchange.cpp
    position.cpp
    rehearsalsign.cpp
    score.cpp
    scoreinfo.cpp
    scorelocation.cpp
    serialization.cpp
    staff.cpp
    system.cpp
    systemlocation.cpp
    tempomarker.cpp
    timesignature.cpp
    tuning.cpp
)
